@startuml

title __LAB7V2's Class Diagram__\n

  namespace  {
    namespace om.example.lab7v2 {
      class com.example.lab7v2.Controller {
      }
    }
  }
  

  namespace  {
    namespace om.example.lab7v2 {
      class com.example.lab7v2.Main {
      }
    }
  }
  

  namespace  {
    namespace om.example.lab7v2 {
      class com.example.lab7v2.ProfileData {
      }
    }
  }
  

  com.example.lab7v2.Controller o-- com.example.lab7v2.ProfileData : profileData
  com.example.lab7v2.Main -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
